--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Sadeera"></activity>
+        <activity android:name=".PWForget"></activity>
     </application>
 
 </manifest>
